Fixing project spacing

--- a/src/components/projects/styles.css
+++ b/src/components/projects/styles.css
@@ -30,7 +30,7 @@
 /* slider */
 
 .slider_holder{
-  height: 90vh;
+  height: 80vh;
 }
 
 .slider {
